fix: Convert 'select" element to 'input' element (#148)
* fix overflowing text

* Use convert select element to an input-dropdown

* Use 100% width for dropdown options

* revert changelog changes

--- a/src/ui/components/inputField/InputField.css
+++ b/src/ui/components/inputField/InputField.css
@@ -130,3 +130,26 @@ textarea.input-field {
 	top: 20%;
 	left: -24px;
 }
+
+.input-dropdown-options {
+	position: absolute;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	top: 44px;
+	left: 0;
+	z-index: 1000;
+	border-radius: 6px;
+	border: none;
+	outline: none;
+	background-color: white;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.input-dropdown-option {
+	padding: 12px 15px 12px;
+	cursor: pointer;
+	font-size: 13px;
+}
+.input-dropdown-option:hover {
+	background-color: var(--color-input-field-prefix-bg);
+}
